fix overflowing tables

--- a/apps/bm/src/components/detail.css
+++ b/apps/bm/src/components/detail.css
@@ -65,3 +65,11 @@
     border-radius: 0.25rem;
     background-color: var(--border-color);
 }
+
+.detail table {
+    max-width: 100%;
+}
+
+.detail table td {
+    word-break: break-all;
+}
